--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
     "expo": "~52.0.0",
+    "expo-print": "^14.1.4",
+    "expo-sharing": "^13.1.5",
     "expo-speech": "~11.5.0",
     "firebase": "^11.9.0",
     "react": "18.3.1",
@@ -21,7 +23,8 @@
     "react-native-paper": "^5.10.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "expo-media-library": "~17.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
