--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
     "expo": "~52.0.0",
+    "expo-image-picker": "~16.0.6",
+    "expo-media-library": "~17.0.6",
     "expo-print": "^14.1.4",
     "expo-sharing": "^13.1.5",
     "expo-speech": "~11.5.0",
@@ -23,8 +25,7 @@
     "react-native-paper": "^5.10.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-vector-icons": "^9.2.0",
-    "expo-media-library": "~17.0.6"
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
