--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-sharing": "^13.1.5",
     "expo-speech": "~11.5.0",
     "firebase": "^11.9.0",
+    "pdf-lib": "^1.17.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
