--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-gesture-handler": "^2.26.0",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-paper": "^5.10.1",
     "react-native-safe-area-context": "4.12.0",
