--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
     "expo": "~52.0.0",
+    "expo-file-system": "~18.0.12",
     "expo-image-picker": "~16.0.6",
     "expo-media-library": "~17.0.6",
     "expo-print": "~14.0.3",
-    "expo-sharing": "^13.1.5",
+    "expo-sharing": "~13.0.1",
     "expo-speech": "~11.5.0",
     "firebase": "^11.9.0",
     "pdf-lib": "^1.17.1",
